{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "1f560e47-5e84-4cee-b24f-938b7ebd326a",
            "actions": [
                {
                    "name": "MoveForward",
                    "type": "Value",
                    "id": "f2106416-4c98-4dd3-a715-e3d1caa2901c",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "0491ca5b-61d6-41fc-8ae1-6459d2d4f0d3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0b328d25-8507-410c-b897-a3d8d82af773",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "981fbf75-c5cf-4ec1-ba71-247a210abee9",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}